# DRF-PJ-STUDY-BACKEND2

./: .gitignore  pyproject.toml
drfback/: asgi.py  settings.py  urls.py  wsgi.py
users/: urls.py
