[tool.poetry]
name = "drf-study-back2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "drf_study_back2"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.1"
django-extensions = "^3.2.1"
autopep8 = "^2.0.2"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
